Updated formatting and added content

--- a/index.html
+++ b/index.html
@@ -2,4 +2,85 @@
 layout: home
 title: FIX FORWARD
 subtitle: PreK-8 lesson plans & activities focused on repair
+
+carts_text: Our Fix-it-Carts are equipped with child-friendly, age-appropriate tools and materials organized to meet the needs of children, and are functional in a school setting.
+carts:
+  - title: THE UPPER LEVEL CART
+    img: /FF LESSONS/Cart Materials/The Upper Level Cart Photo.png
+    supply_list: /FF LESSONS/Cart Materials/Upper Level Cart Supply List.pdf
+  - title: THE LOWER LEVEL CART
+    img: /FF LESSONS/Cart Materials/The Lower Level Cart Photo.png
+    supply_list: /FF LESSONS/Cart Materials/Lower Level Cart Supply List.pdf
+
+lessons_text: Fix Forward also has a vareity of lesson plans and activites for repair projects.
+lessons:
+  - title: BUILD THE DRAWERS
+    img: /FF LESSONS/Build The Drawers/Build the drawers photo.png
+    content: Students build the drawers for the cart
+    grades: 1-4
+    lesson_plan: /FF LESSONS/Build The Drawers/BuildFixItCartDrawers.pdf
+  - title: REPAIR BOOKS
+    img: /FF LESSONS/Book Recommendations/Repair Books Photo.jpeg
+    content: Elementary level book recommendations.
+    book_list: /FF LESSONS/Book Recommendations/Repair Book Recommendations.pdf
+  - title: SHARE THE CART
+    img: /FF LESSONS/Share the Fix-it Cart/Share the Fix it cart photo.png
+    content: Presenting the cart to the school community.
+    grades: 1-4
+    lesson_plan: /FF LESSONS/Share the Fix-it Cart/ShareTheFixItCart.pdf
+  - title: MY TOOL BOOK
+    img: /FF LESSONS/My Tool Book/Tool Book Work 2.jpeg
+    content: Identify common tools by creating a cut and paste book.
+    grades: 1-3
+    lesson_plan: /FF LESSONS/My Tool Book/My Tool Book Fix Forward lesson plan.pdf
+    book_template: /FF LESSONS/My Tool Book/Fix Forward Tool cut and paste book.pdf
+    folding_directions: /FF LESSONS/My Tool Book/How to fold your book.pdf
+  - title: WRITE A REPAIR STORY
+    img: /FF LESSONS/Write a Repair Story/Write a Repair Story Work 3.jpg
+    content: Creative writing project centered on repair and problem solving.
+    grades: 1-3
+    lesson_plan: /FF LESSONS/Write a Repair Story/Write a Repair Story Fix Forward lesson plan.pdf
+  - title: STUFFIE HOSPITAL
+    img: /FF LESSONS/Stuffie Hospital/Stuffie Hospital Photo.jpg
+    content: Learn to repair a beloved toy with needle and thread.
+    grades: K-4
+    lesson_plan: /FF LESSONS/Stuffie Hospital/Stuffie Hospital Fix Forward lesson plan.pdf
+  - title: MEMORY CARDS
+    img: /FF LESSONS/Memory Cards Know Your Supplies!/IMG_8010.jpeg
+    content: A card matching game identifying common tools.
+    grades: Prek-3
+    lesson_plan: /FF LESSONS/Memory Cards Know Your Supplies!/Memory Cards Fix Forward lesson plan.pdf
+    card_printable: /FF LESSONS/Memory Cards Know Your Supplies! /FF Tool Memory Game Cards.pdf
+  - title: THREE PART CARDS
+    img: /FF LESSONS/Three Part Cards Know Your Supplies!/Three Part Cards 1.jpeg
+    content: An activity connecting tool names and images.
+    grades: Prek
+    lesson_plan: /FF LESSONS/Three Part Cards Know Your Supplies! /Three Part Cards Fix Forward lesson plan.pdf
+    card_printable: /FF LESSONS/Three Part Cards Know Your Supplies! /FF Tool Three Part Cards.pdf
+  - title: TAKE APART PARTY
+    img: /FF LESSONS/Take Apart Party/Take Apart Party Photo 1.jpeg
+    content: Disassemble objects to learn about their construction and functionality.
+    grades: all
+    lesson_plan: /FF LESSONS/Take Apart Party/Take Apart Party Fix Forward lesson plan.pdf
+  - title: REPAIR DISCUSSION
+    img: /FF LESSONS/Repair Discussion/Repair Discussion Photo.jpg
+    content: A conversation about the advantages of repair.
+    grades: 4-8
+    lesson_plan: /FF LESSONS/Repair Discussion/Repair Discussion Fix Forward lesson plan.pdf
+    slideshow: /FF LESSONS/Repair Discussion/Why Repair Slideshow Fix Forward.pptx
+  - title: DESIGN A POSTER
+    img: /FF LESSONS/Design A Poster/Repair Poster working 3.jpeg
+    content: Create an educational poster promoting repair.
+    grades: 4-8
+    lesson_plan: /FF LESSONS/Design A Poster /Design A Poster Fix Forward lesson plan.pdf
+  - title: POP UP REPAIR CAFE
+    img: /FF LESSONS/Pop Up Repair Cafe/Pop Up Repair Cafe 1.jpeg
+    content: A space for people to learn and practice repair skills.
+    grades: all
+    lesson_plan: /FF LESSONS/Pop Up Repair Cafe/Pop Up Repair Cafe Fix Forward lesson plan.pdf
 ---
+The <a href="https://rensselaer-repair.cafe">Rensselaer Repair Cafe</a> has partnered with the
+<a href="https://parkerschool.org">Robert C. Parker School</a> and the
+<a href="https"//woodlandhill.org">Woodland Hill Montessori</a> School to foster a repair mindset in K-8 schools. Fix Forward has opportunities
+for children to develop their interests, skills, and confidence as they become the repair
+champions of the next generation.
