--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ subtitle: PreK-8 lesson plans & activities focused on repair
 carts_text: Our Fix-it-Carts are equipped with child-friendly, age-appropriate tools and materials organized to meet the needs of children, and are functional in a school setting.
 carts:
   - title: THE UPPER LEVEL CART
-    img: /FF LESSONS/Cart Materials/The Upper Level Cart Photo.png
+    img: FF LESSONS/Cart Materials/The Upper Level Cart Photo.png
     supply_list: /FF LESSONS/Cart Materials/Upper Level Cart Supply List.pdf
   - title: THE LOWER LEVEL CART
-    img: /FF LESSONS/Cart Materials/The Lower Level Cart Photo.png
+    img: FF LESSONS/Cart Materials/The Lower Level Cart Photo.png
     supply_list: /FF LESSONS/Cart Materials/Lower Level Cart Supply List.pdf
 
 lessons_text: Fix Forward also has a vareity of lesson plans and activites for repair projects.
