--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: FIX FORWARD
 subtitle: PreK-8 lesson plans & activities focused on repair
 
-carts_text: Our Fix-it-Carts are equipped with child-friendly, age-appropriate tools and materials organized to meet the needs of children, and are functional in a school setting.
+carts_text: Our <b>Fix-it-Carts</b> are equipped with child-friendly, age-appropriate tools and materials organized to meet the needs of children, and are functional in a school setting.
 carts:
   - title: THE UPPER LEVEL CART
     img: /FF LESSONS/Cart Materials/The Upper Level Cart Photo.png
@@ -12,7 +12,7 @@ carts:
     img: /FF LESSONS/Cart Materials/The Lower Level Cart Photo.png
     supply_list: /FF LESSONS/Cart Materials/Lower Level Cart Supply List.pdf
 
-lessons_text: Fix Forward also has a vareity of lesson plans and activites for repair projects.
+lessons_text: Fix Forward also has a variety of <b>lesson plans and activities</b> for repair projects.
 lessons:
   - title: BUILD THE DRAWERS
     img: /FF LESSONS/Build The Drawers/Build the drawers photo.png
