Fix broken links

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ lessons:
     img: /FF LESSONS/Memory Cards Know Your Supplies!/IMG_8010.jpeg
     content: A card matching game identifying common tools.
     grades: Prek-3
-    lesson_plan: /FF LESSONS/Memory Cards Know Your Supplies!/Memory Cards Fix Forward lesson plan.pdf
-    card_printable: /FF LESSONS/Memory Cards Know Your Supplies! /FF Tool Memory Game Cards.pdf
+    lesson_plan: /FF LESSONS/Memory Cards Know Your Supplies!/Memory Game Fix Forward lesson plan.pdf
+    card_printable: /FF LESSONS/Memory Cards Know Your Supplies!/FF Tool Memory Game Cards.pdf
   - title: THREE PART CARDS
     img: /FF LESSONS/Three Part Cards Know Your Supplies!/Three Part Cards 1.jpeg
     content: An activity connecting tool names and images.
     grades: Prek
-    lesson_plan: /FF LESSONS/Three Part Cards Know Your Supplies! /Three Part Cards Fix Forward lesson plan.pdf
-    card_printable: /FF LESSONS/Three Part Cards Know Your Supplies! /FF Tool Three Part Cards.pdf
+    lesson_plan: /FF LESSONS/Three Part Cards Know Your Supplies!/Three Part Cards Fix Forward lesson plan.pdf
+    card_printable: /FF LESSONS/Three Part Cards Know Your Supplies!/FF Tool Three Part Cards.pdf
   - title: TAKE APART PARTY
     img: /FF LESSONS/Take Apart Party/Take Apart Party Photo 1.jpeg
     content: Disassemble objects to learn about their construction and functionality.
@@ -72,7 +72,7 @@ lessons:
     img: /FF LESSONS/Design A Poster/Repair Poster working 3.jpeg
     content: Create an educational poster promoting repair.
     grades: 4-8
-    lesson_plan: /FF LESSONS/Design A Poster /Design A Poster Fix Forward lesson plan.pdf
+    lesson_plan: /FF LESSONS/Design A Poster/Design A Poster Fix Forward lesson plan.pdf
   - title: POP UP REPAIR CAFE
     img: /FF LESSONS/Pop Up Repair Cafe/Pop Up Repair Cafe 1.jpeg
     content: A space for people to learn and practice repair skills.
