Add lesson content.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@ lessons:
     content: A space for people to learn and practice repair skills.
     grades: all
     lesson_plan: /FF LESSONS/Pop Up Repair Cafe/Pop Up Repair Cafe Fix Forward lesson plan.pdf
+  - title: FIX IT NOW PARTY
+    img: /FF LESSONS/Fix It Now Party/FixItCartThumbnail (1).jpg
+    content: Make several quick fixes with a group of children.
+    grades: 1-4
+    lesson_plan: /FF LESSONS/Fix It Now Party/FixItNowParty.pdf
+  - title: KNOW YOUR TOOLS: WRITE A FIX IT BOOK
+    img: /FF LESSONS/Know Your Tools: Write a Fix It Book/FixItCartThumbnail.jpg
+    content: Create a book filled with tool drawings and labels.
+    grades: 1-4
+    lesson_plan: /FF LESSONS/Know Your Tools: Write a Fix It Book/KnowYourTools_WriteAFixItCartBook.pdf
+    book_template: /FF LESSONS/Know Your Tools: Write a Fix It Book/BlankFixItCartJournal.pdf
 ---
 The <a href="https://rensselaer-repair.cafe">Rensselaer Repair Cafe</a> has partnered with the
 <a href="https://parkerschool.org">Robert C. Parker School</a> and the
