Allow colon in title

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ lessons:
     content: Make several quick fixes with a group of children.
     grades: 1-4
     lesson_plan: /FF LESSONS/Fix It Now Party/FixItNowParty.pdf
-  - title: KNOW YOUR TOOLS: WRITE A FIX IT BOOK
+  - title: "KNOW YOUR TOOLS: WRITE A FIX IT BOOK"
     img: /FF LESSONS/Know Your Tools: Write a Fix It Book/FixItCartThumbnail.jpg
     content: Create a book filled with tool drawings and labels.
     grades: 1-4
