--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ lessons:
     grades: 1-4
     lesson_plan: /FF LESSONS/Fix It Now Party/FixItNowParty.pdf
   - title: "KNOW YOUR TOOLS: WRITE A FIX IT BOOK"
-    img: /FF LESSONS/Know Your Tools: Write a Fix It Book/FixItCartThumbnail.jpg
+    img: "/FF LESSONS/Know Your Tools: Write a Fix It Book/FixItCartThumbnail.jpg"
     content: Create a book filled with tool drawings and labels.
     grades: 1-4
-    lesson_plan: /FF LESSONS/Know Your Tools: Write a Fix It Book/KnowYourTools_WriteAFixItCartBook.pdf
-    book_template: /FF LESSONS/Know Your Tools: Write a Fix It Book/BlankFixItCartJournal.pdf
+    lesson_plan: "/FF LESSONS/Know Your Tools: Write a Fix It Book/KnowYourTools_WriteAFixItCartBook.pdf"
+    book_template: "/FF LESSONS/Know Your Tools: Write a Fix It Book/BlankFixItCartJournal.pdf"
 ---
 The <a href="https://rensselaer-repair.cafe">Rensselaer Repair Cafe</a> has partnered with the
 <a href="https://parkerschool.org">Robert C. Parker School</a> and the
