--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ lessons:
     grades: all
     lesson_plan: /FF LESSONS/Pop Up Repair Cafe/Pop Up Repair Cafe Fix Forward lesson plan.pdf
   - title: FIX IT NOW PARTY
-    img: /FF LESSONS/Fix It Now Party/FixItCartThumbnail (1).jpg
+    img: /FF LESSONS/Fix It Now Party/Fix It Now Party.png
     content: Make several quick fixes with a group of children.
     grades: 1-4
     lesson_plan: /FF LESSONS/Fix It Now Party/FixItNowParty.pdf
